--- a/style.css
+++ b/style.css
@@ -1,75 +1,41 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;500;600&display=swap');
 
 * {
-    color: rgb(124, 50, 38);
-    font-family: 'Josefin Sans';
+    margin: 0;
+    padding: 0;
 }
 
 body {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    overflow-y: hidden;
-}
-
-.window {
-    width: 100vw;
-    height: 100vh;
-    background-color: bisque;
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
+    flex-direction: row;
+    background-color: bisque;
+
 }
 
-#h1 {
-    font-size: 60px;
-}
-
-#hodnoceni {
-    font-size: 20px;
-    margin-top: 50px;
-}
-
-input {
-    background: none;
-    width: 200px;
-    height: 50px;
-    font-size: 20px;
-    border: none;
+a {
+    width: 250px;
+    height: 250px;
+    background-color: rgb(189, 153, 98);
+    position: relative;
+    margin: 20px;
+    border-radius: 20px;
+    transition: 0.2s;
     outline: none;
-    border-bottom: 2px solid rgb(124, 50, 38);
 }
 
-.wrapper {
-    position: fixed;
-    width: 100vw;
-    height: 100vh;
-    background-color: aliceblue;
-    transition: .2s;
-    display: none;
-    justify-content: center;
-    z-index: 100000000000;
-    align-items: center;
-    flex-direction: column;
+a:hover {
+    width: 270px;
+    height: 270px;
+    transition: 0.1s;
 }
 
-.wrapper h1 {
-    font-size: 70px;
-}
-
-.wrapper button {
-    width: 200px;
-    height: 50px;
-    font-size: 20px;
-    background: none;
-    border: 2px solid rgb(124, 50, 38);
-    transition: .2s;
-    cursor: pointer;
-}
-
-.wrapper button:hover {
-    width: 230px;
-    height: 60px;
-    transition: .2s;
+h1 {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-family: 'Josefin Sans';
 }
