--- a/style.css
+++ b/style.css
@@ -39,3 +39,25 @@ h1 {
     color: white;
     font-family: 'Josefin Sans';
 }
+
+@media(max-width:730px) {
+    body {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    a {
+        width: 150px;
+        height: 150px;
+    }
+
+    h1 {
+        font-size: 20px;
+    }
+
+    a:hover {
+        width: 170px;
+        height: 170px;
+    }
+}
